登录时和获取用户信息时返回Permission、新增getRoleAllName函数、getRoleList -> getAllRole
代码优化